<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lable_rmb_hint"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:autofillHints="@string/app_name"
        />

    <TextView
        android:id="@+id/showout"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/lable_dollar" />

    <Button
        android:id="@+id/euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/lable_euro" />

    <Button
        android:id="@+id/won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/lable_won" />

    <Button
        android:id="@+id/tiaozhuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openOne"
        android:text="@string/change" />
</LinearLayout>