<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity">

    <EditText
        android:id="@+id/dollar_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/lable_dollar"
        android:hint="@string/lable_dollar"
        android:inputType="numberSigned"/>

    <EditText
        android:id="@+id/euro_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/lable_euro"
        android:hint="@string/lable_euro"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/won_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="@string/lable_won"
        android:hint="@string/lable_won"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:layout_marginTop="50dp"
        android:text="@string/btn_save_label" />
</LinearLayout>