<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".xlxActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/key_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/key_word" />

        <Button
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="openOne"
            android:text="@string/get_word" />
    </LinearLayout>

    <ListView
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>