<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/teamname1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/teamname"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/score1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/score"
                android:textSize="65sp" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/center"
            android:layout_width="2dp"
            android:layout_height="350dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/teamname2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/teamname2"
                android:textSize="35sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/score2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/score"
                android:textSize="65sp" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd1"
                android:text="@string/lable_add1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd2"
                android:text="@string/lable_add2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:onClick="btnAdd3"
                android:text="@string/lable_add3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="368dp"
        android:layout_marginBottom="150dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>